tests/errors/first_stage/.define/saved_keyword/saved_keyword.as
; a constant's name is a saved keyword
.define hlt = 24